--- a/rabbitmq/Dockerfile
+++ b/rabbitmq/Dockerfile
@@ -4,7 +4,7 @@
 # Date: 08/04/2013
 
 
-FROM openstack/common
+FROM racker/precise-with-updates
 MAINTAINER Paul Czarkowski "paul@paulcz.net"
 
 RUN apt-get -yqq install rabbitmq-server
