--- a/database/systemd/openstack-database.service
+++ b/database/systemd/openstack-database.service
@@ -6,9 +6,9 @@ After=openstack-database-data.service
 [Service]
 EnvironmentFile=/etc/environment
 TimeoutStartSec=20m
-#ExecStartPre=/usr/bin/docker pull paulczar/openstack-database
-ExecStart=/bin/sh -c "/usr/bin/docker run --name openstack-database --rm -p 3306:3306 -e PUBLISH=3306 -e HOST=$COREOS_PRIVATE_IPV4 --volumes-from openstack-database-data paulczar/openstack-database"
-ExecStop=/usr/bin/docker stop paulczar/openstack-database
+ExecStartPre=/usr/bin/docker pull dockenstack/database
+ExecStart=/bin/sh -c "/usr/bin/docker run --name openstack-database --rm -p 3306:3306 -e PUBLISH=3306 -e HOST=$COREOS_PRIVATE_IPV4 --volumes-from openstack-database-data dockenstack/database"
+ExecStop=/usr/bin/docker stop openstack-database
 
 [X-Fleet]
 X-ConditionMachineOf=openstack-database-data.service
