--- a/glance/systemd/openstack-glance-data.service
+++ b/glance/systemd/openstack-glance-data.service
@@ -5,7 +5,7 @@ Description=openstack-database-data
 Type=oneshot
 RemainAfterExit=yes
 ExecStartPre=/usr/bin/docker pull dockenstack/base
-ExecStart=/bin/sh -c "docker inspect openstack-database-data >/dev/null 2>&1 || docker run --name openstack-database-data -v /var/lib/mysql dockenstack/base true"
+ExecStart=/bin/sh -c "docker inspect openstack-glance-data >/dev/null 2>&1 || docker run --name openstack-glance-data -v /var/lib/glance/images dockenstack/base true"
 
 [Install]
 WantedBy=multi-user.target
