verbose logging, nsenter

--- a/glance/templates/glance-api.conf
+++ b/glance/templates/glance-api.conf
@@ -42,7 +42,7 @@ bind_port = 9292
 #
 # If `log_file` is omitted and `use_syslog` is false, then log messages are
 # sent to stdout as a fallback.
-log_file = /var/log/glance/api.log
+# log_file = /var/log/glance/api.log
 
 # Backlog requests when creating socket
 backlog = 4096
