--- a/glance/templates/glance-registry.conf
+++ b/glance/templates/glance-registry.conf
@@ -16,7 +16,7 @@ bind_port = 9191
 #
 # If `log_file` is omitted and `use_syslog` is false, then log messages are
 # sent to stdout as a fallback.
-log_file = /var/log/glance/registry.log
+# log_file = /var/log/glance/registry.log
 
 # Backlog requests when creating socket
 backlog = 4096
