--- a/database/systemd/openstack-database-1.service
+++ b/database/systemd/openstack-database-1.service
@@ -7,9 +7,11 @@ After=openstack-database-data.service
 EnvironmentFile=/etc/environment
 TimeoutStartSec=20m
 ExecStartPre=/usr/bin/docker pull dockenstack/database
-ExecStart=/bin/sh -c "/usr/bin/docker run --name openstack-database --rm -p 3306:3306 -e PUBLISH=3306 -e HOST=$COREOS_PRIVATE_IPV4 --volumes-from openstack-database-data dockenstack/database"
+ExecStart=/bin/sh -c "/usr/bin/docker run --name openstack-database --rm -p 3306:3306 -p 4444:4444 -p 4567:4567 -e PUBLISH=3306 -e HOST=$COREOS_PRIVATE_IPV4 -e CLUSTER=openstack -e MEMBER=1 --volumes-from openstack-database-data dockenstack/database"
 ExecStop=/usr/bin/docker stop openstack-database
 
 [X-Fleet]
 X-ConditionMachineOf=openstack-database-data.service
 
+EXPOSE 4444
+EXPOSE 4567
