cleaning up database

--- a/database/conf.d/utf8.cnf.toml
+++ b/database/conf.d/utf8.cnf.toml
@@ -5,7 +5,6 @@ owner = "root"
 group = "root"
 mode  = "0644"
 keys = [
-  "/openstack/database",
 ]
 check_cmd = "/usr/sbin/mysqld --help > /dev/null"
-reload_cmd = "kill -1 `cat /app/database.pid`"
+reload_cmd = "ps axu | grep '/usr/sbin/mysqld' | grep -v grep | awk '{ print $2 }'"
