--- a/database/conf.d/cluster.cnf.toml
+++ b/database/conf.d/cluster.cnf.toml
@@ -5,7 +5,9 @@ owner = "root"
 group = "root"
 mode  = "0644"
 keys = [
-  "/openstack/database",
+  "/openstack/database/cluster/name",
+  "/openstack/database/credentials/repUser",
+  "/openstack/database/credentials/repPass"
 ]
 check_cmd = "/usr/sbin/mysqld --help > /dev/null"
-reload_cmd = "kill -1 `cat /app/database.pid`"
+reload_cmd = "ps axu | grep '/usr/sbin/mysqld' | grep -v grep | awk '{ print $2 }'"
