--- a/database/conf.d/my.cnf.toml
+++ b/database/conf.d/my.cnf.toml
@@ -4,8 +4,6 @@ dest  = "/etc/mysql/my.cnf"
 owner = "root"
 group = "root"
 mode  = "0644"
-keys = [
-  "/openstack/database",
-]
+keys = []
 check_cmd = "/usr/sbin/mysqld --help > /dev/null"
-reload_cmd = "kill -1 `cat /app/database.pid`"
+reload_cmd = "ps axu | grep '/usr/sbin/mysqld' | grep -v grep | awk '{ print $2 }'"
