--- a/database/conf.d/reload.toml
+++ b/database/conf.d/reload.toml
@@ -5,7 +5,7 @@ owner = "root"
 group = "root"
 mode  = "0755"
 keys = [
-  "/openstack/database",
+  "/openstack/database/credentials",
 ]
 check_cmd = "/app/bin/check {{ .src }}"
 reload_cmd = "/app/bin/reload"
