--- a/database/templates/haproxy.cfg
+++ b/database/templates/haproxy.cfg
@@ -14,5 +14,5 @@ listen database_LB
     balance roundrobin
     option tcpka
 {{range $server := .openstack_database_cluster_mysqlNodes}}
-    server {{$server.Key}} {{$server.Value}} check
+    server {{$server.Value}} {{$server.Value}} check
 {{end}}
