--- a/database/conf.d/haproxy.cfg.toml
+++ b/database/conf.d/haproxy.cfg.toml
@@ -9,4 +9,4 @@ keys = [
   "/openstack/database/cluster/mysqlNodes"
 ]
 check_cmd = "/app/bin/check {{ .src }}"
-reload_cmd = "kill -1 `cat /app/haproxy.pid`"
+reload_cmd = "service haproxy reload"
