--- a/database/systemd/openstack-database-1.service
+++ b/database/systemd/openstack-database-1.service
@@ -12,3 +12,4 @@ ExecStop=/usr/bin/docker stop openstack-database-1
 
 [X-Fleet]
 X-ConditionMachineOf=openstack-database-1-data.service
+X-Conflicts=openstack-database-?.service
