--- a/database/systemd/openstack-database-loadbalancer.service
+++ b/database/systemd/openstack-database-loadbalancer.service
@@ -4,6 +4,6 @@ Description=openstack-database-loadbalancer
 [Service]
 EnvironmentFile=/etc/environment
 TimeoutStartSec=20m
-#ExecStartPre=/usr/bin/docker pull dockenstack/database:galera
+ExecStartPre=/usr/bin/docker pull dockenstack/database:galera
 ExecStart=/bin/sh -c "/usr/bin/docker run --name openstack-database-loadbalancer --rm -p 3307:3307 -e PUBLISH=3307 -e HOST=$COREOS_PRIVATE_IPV4 dockenstack/database:galera /app/bin/loadbalancer"
 ExecStop=/usr/bin/docker stop openstack-database-loadbalancer
