more updates, commit to rebuild

--- a/database/templates/haproxy.cfg
+++ b/database/templates/haproxy.cfg
@@ -13,6 +13,15 @@ listen database_LB
     mode tcp
     balance roundrobin
     option tcpka
+    option mysql-check user haproxy_check
 {{range $server := .openstack_database_cluster_mysqlNodes}}
     server {{$server.Value}} {{$server.Value}} check
 {{end}}
+
+listen stats *:8080
+    mode http
+    option httpclose
+    balance roundrobin
+    stats uri /
+    stats realm Haproxy\ Statistics
+    stats auth admin:admin
