--- a/database/templates/haproxy.cfg
+++ b/database/templates/haproxy.cfg
@@ -15,7 +15,7 @@ listen database_LB
     option tcpka
     option mysql-check user haproxy_check
 {{range $server := .openstack_database_cluster_mysqlNodes}}
-    server {{$server.Value}} {{$server.Value}} check
+    server {{Base $server.Key}} {{$server.Value}} check 
 {{end}}
 
 listen stats *:8080
