--- a/keystone/templates/keystone.conf
+++ b/keystone/templates/keystone.conf
@@ -202,22 +202,22 @@ admin_token={{ .openstack_keystone_adminToken }}
 #rabbit_port=5672
 
 # RabbitMQ HA cluster host:port pairs. (list value)
-#rabbit_hosts=$rabbit_host:$rabbit_port
+rabbit_hosts= {{.openstack_messaging_cluster_endpoints[.openstack_messaging_cluster_endpoints.keySet().toArray()[0]] }}
 
 # Connect over SSL for RabbitMQ. (boolean value)
 #rabbit_use_ssl=false
 
 # The RabbitMQ userid. (string value)
-#rabbit_userid=guest
+#rabbit_userid={{.openstack_messaging_credentials_openstackUser }}
 
 # The RabbitMQ password. (string value)
-#rabbit_password=guest
+#rabbit_password={{.openstack_messaging_credentials_openstackPass }}
 
 # the RabbitMQ login method (string value)
 #rabbit_login_method=AMQPLAIN
 
 # The RabbitMQ virtual host. (string value)
-#rabbit_virtual_host=/
+#rabbit_virtual_host={{.openstack_messaging_vhosts["openstack"] }}
 
 # How frequently to retry connecting with RabbitMQ. (integer
 # value)
