--- a/keystone/templates/keystone.conf
+++ b/keystone/templates/keystone.conf
@@ -202,7 +202,10 @@ admin_token={{ .openstack_keystone_adminToken }}
 #rabbit_port=5672
 
 # RabbitMQ HA cluster host:port pairs. (list value)
-rabbit_hosts= {{.openstack_messaging_cluster_endpoints[.openstack_messaging_cluster_endpoints.keySet().toArray()[0]] }}
+rabbit_hosts={{range $rabbit := .openstack_messaging_cluster_endpoints}}{{$server.Value}}, {{end}}
+
+
+{{ range $app_domains := $domains }}{{ if eq (Base $service.Key) (Base $app_domains.Key) }} {{ $app_domains.Value }}{{ end }}{{ end }}
 
 # Connect over SSL for RabbitMQ. (boolean value)
 #rabbit_use_ssl=false
