--- a/keystone/conf.d/database.toml
+++ b/keystone/conf.d/database.toml
@@ -6,7 +6,9 @@ group = "root"
 mode  = "0755"
 keys = [
   "/openstack/keystone",
-  "/openstack/database",
+  "/openstack/database/host",
+  "/openstack/database/port",
+  "/openstack/database/credentials",
 ]
 check_cmd = "/app/bin/check {{ .src }}"
 reload_cmd = "/app/bin/database"
