--- a/keystone/templates/keystone.conf
+++ b/keystone/templates/keystone.conf
@@ -202,10 +202,7 @@ admin_token={{ .openstack_keystone_adminToken }}
 #rabbit_port=5672
 
 # RabbitMQ HA cluster host:port pairs. (list value)
-rabbit_hosts={{range $rabbit := .openstack_messaging_cluster_endpoints}}{{$server.Value}}, {{end}}
-
-
-{{ range $app_domains := $domains }}{{ if eq (Base $service.Key) (Base $app_domains.Key) }} {{ $app_domains.Value }}{{ end }}{{ end }}
+rabbit_hosts={{range $server := .openstack_messaging_cluster_endpoints}}{{$server.Value}}, {{end}}
 
 # Connect over SSL for RabbitMQ. (boolean value)
 #rabbit_use_ssl=false
@@ -220,7 +217,7 @@ rabbit_hosts={{range $rabbit := .openstack_messaging_cluster_endpoints}}{{$serve
 #rabbit_login_method=AMQPLAIN
 
 # The RabbitMQ virtual host. (string value)
-#rabbit_virtual_host={{.openstack_messaging_vhosts["openstack"] }}
+#rabbit_virtual_host={{.openstack_messaging_vhosts_openstack }}
 
 # How frequently to retry connecting with RabbitMQ. (integer
 # value)
